# letterforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/sandbox/: Dockerfile  requirements.txt
src/letterforge/: __init__.py  config.py  models.py  packaging.py  pipeline.py  post_processing.py  prompts.py
src/letterforge/cli/: main.py
src/letterforge/image_models/: __init__.py  base.py  comfyui.py  dalle.py  imagen.py
src/letterforge/llms/: __init__.py  base.py  claude.py  gemini.py  gpt4o.py  ollama.py
src/letterforge/sandbox/: __init__.py  executor.py  validator.py
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py  test_models.py  test_packaging.py  test_prompts.py
tests/unit/sandbox/: test_executor.py  test_validator.py
